end of day push

--- a/todo.txt
+++ b/todo.txt
@@ -1,9 +1,20 @@
 What do you need to do?
 
-
+## Init setups
 - setup React                                     [x]
 - setup axios                                     [x]
 - setup React-Bootstrap                           [x]
 - setup React routing                             [x]
 - setup sign UP page                              [x]
 - setup sign IN page                              [x]
+
+## Login/Logout User
+- send sign up credentails to server              []
+- set token in localStorage                       []
+
+
+
+## Show adventure products on client side
+- adventure page index services                   []
+- pull adventures from DB to homepage             []
+
