--- a/todo.txt
+++ b/todo.txt
@@ -44,4 +44,4 @@ What do you need to do?
 - setup users access and conduct testing          [x]
 
 ## React Client side route guards
-- This is going to be painful!!
+- add route guard handling to centeralised routes  []
